/*
 * $Id: ChangeLog,v 1.3978 2005/03/23 22:19:45 ronpinkas Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2005-03-24 00:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * makefile.nt
    - -DHB_STATIC_STARTUP

  * include/hbinit.h
    * Modified Startup code for MSVC to always be in 'C' mode unless
      over-ridden by -DHB_STATIC_STARTUP.  My appologies if this is
      an inconvenience for anyone, but it's required to maintain
      compatibility with 3rd party products.

2005-03-23 13:27 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    ! Fixed a GPF trap when OLE Server has to reallocate a string argument passed BYREF.
      /*
         Stringfwe pass in pDispParams->rgvarg[ n ].n1.n2.n3.pbstrVal
         must be a system allocated string!
       */

  * bin/pack_src.bat
  * bin/pack_bin.bat
  * include/hbver.h
    * Increased to 0.99.4

2005-03-23 20:30 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rtl/dateshb.c
    * check parameter length in STOD function to avoid
      errors reported by valgrind or similar tools and
      potential GPF.

2005-03-22 19:00 UTC+0100 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
    ! fixed typo which causes index close after creation with some
      ordCondSet flag combination
  * xharbour/source/vm/garbage.c
    ! fixed reference checking for codeblock created inside object
      methods

2005-03-21 17:12 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
  * source/rtl/win32ole.prg
    ! Fixed bad typo GPF trap.
    * More conservative WideToAnsi()

  * source/vm/hash.c
    ! Fixed 2 GPF traps related to calling hb_itemReleaseString() and not resetting ->type member.

  * source/vm/hvm.c
    * Comments related to hb_itemReleaseString()

  * source/vm/memvars.c