@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3978 2005/03/23 22:19:45 ronpinkas Exp $
+ * $Id: ChangeLog,v 1.3979 2005/03/24 05:10:08 paultucker Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,10 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-03-23 21:51 UTC-0800 Ron Pinkas <Ron@xHarbour.com>
+  * include/hbver.h
+    * Updated.
 
 2005-03-24 00:00 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
   * makefile.nt
